<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintCircleRadius="@dimen/cardview_default_radius"
    tools:context=".ui.detail.DetailActivity"
    android:layout_margin="25dp"
    android:background="@color/black">

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        app:layout_constraintBottom_toBottomOf="@+id/nestedScrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageView
        android:id="@+id/poster"
        android:layout_width="190dp"
        android:layout_height="254dp"
        android:layout_marginTop="96dp"
        android:contentDescription="@string/poster"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.159"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:background="@color/purple_700" />

    <ImageButton
        android:id="@+id/favBut"
        android:layout_width="34dp"
        android:layout_height="30dp"
        android:layout_marginEnd="44dp"
        android:background="#00FFFFFF"
        android:src="@drawable/ic_fav_off"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/poster"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintVertical_bias="0.128" />

    <TextView
        android:id="@+id/rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:background="@drawable/ic_rate"
        android:fontFamily="@font/mouse_memoirs"
        android:padding="18dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/size_title_home"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/nestedScrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toEndOf="@+id/poster"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintVertical_bias="0.179"
        tools:text="@string/rate" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rad"
        android:fontFamily="@font/mouse_memoirs"
        android:maxLines="2"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/title_detail"
        app:layout_constraintBottom_toBottomOf="@+id/nestedScrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025"
        tools:text="@string/title" />

    <TextView
        android:id="@+id/release"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/poster"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintVertical_bias="0.0"
        tools:text="@string/release" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bg_rad"
        android:fontFamily="@font/mouse_memoirs"
        android:paddingLeft="@dimen/padding_layout"
        android:paddingRight="@dimen/padding_layout"
        android:text="@string/overview"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/nestedScrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toEndOf="@+id/poster" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/padding_layout"
        android:background="@drawable/bg_rad"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/poster"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/describe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_layout"
            android:fontFamily="@font/patrick_hand"
            android:lineSpacingExtra="2sp"
            android:padding="@dimen/movie_title_padding"
            android:textAlignment="center"
            android:textColor="@color/white"
            tools:text="@string/ceritanya_desc" />
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>